# openalex-mcp-server

./: README.md  pyproject.toml  server.py  tool_schemas.json
src/openalex_mcp_server/: server.py
